[tool.poetry]
name = "yume-auth"
version = "0.1.0"
description = "Yume auth is the micro-service for authorization, authentication and security of yume"
authors = ["gagocarrilloedgar <edgargc.upc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.3"
pytest = "^7.3.1"
flask-cors = "^3.0.10"
flasgger = "^0.9.5"
python-dotenv = "^1.0.0"
marshmallow = "^3.19.0"
flask-marshmallow = "^0.15.0"
flask-sqlalchemy = "^3.0.3"
flask-jwt-extended = "^4.4.4"


[tool.poetry.group.dev.dependencies]
autohooks = "^23.4.0"
autohooks-plugin-black = "^22.11.0"
autohooks-plugin-pylint = "^22.8.1"
isort = "^5.12.0"
black = "^23.3.0"


[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.pylint"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = ".:flask run"
test_unit = "poetry run pytest ./tests/unit"
test_integration = "poetry run pytest ./tests/integration"
test = "poetry run pytest ./tests"
lint = "poetry run pylint ./src"
format = "poetry run black ./src && poetry run isort ./src"
start = "poetry run FLASK_APP=src/app.py flask run"
